--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora do Dia</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link href="https://bbaldaia.github.io/hora-do-dia/style.css" rel="stylesheet" />
+    <script src="https://bbaldaia.github.io/hora-do-dia/scripts.js"> </script>
+    
 </head>
 <body onload="carregar()">
     <header>
@@ -20,7 +22,6 @@
     </section>
     <footer>
         <p> &copy;Curso em Vídeo</p>
-    </footer>
-    <script src="script.js"></script>
+    </footer>    
 </body>
 </html>
